--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 requests==2.31.0
 pytz==2024.1
-python-dateutil==2.8.2
+python-dateutil>=2.8.2
 python-dotenv==1.0.0
-pandas==2.1.4
+pandas>=2.0.0
 aiohttp==3.9.1
 asyncio==3.4.3 
