--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,8 @@ python-dateutil>=2.8.2
 python-dotenv==1.0.0
 pandas>=2.0.0
 aiohttp==3.9.1
-asyncio==3.4.3 
+asyncio==3.4.3
+matplotlib==3.8.3
+seaborn==0.13.2
+web3==6.15.1
+plotly==5.19.0 
