--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
-# Python
+# Python virtual environment
+venv/
 __pycache__/
+*.pyc
+
+# IDE files
+.vscode/
+.idea/
+
+# Environment variables
+.env
+
+# Logs
+*.log
+
+# Temporary files
+*.tmp
+
+# Report files (optional, uncomment if you don't want to track reports)
+# reports/
+
+# Python
 *.py[cod]
 *$py.class
 *.so
@@ -21,18 +41,12 @@ wheels/
 *.egg
 
 # Virtual Environment
-venv/
 ENV/
 env/
 
 # IDE
-.idea/
-.vscode/
 *.swp
 *.swo
-
-# Environment variables
-.env
 
 # macOS
 .DS_Store
@@ -41,7 +55,6 @@ env/
 
 # Data and Reports (optional, comment out if you want to track these)
 #data/
-#reports/
 
 # Project specific
 data/*.json
